# crew-property-damage-agent

./: .gitignore  README.md  pyproject.toml
src/claims_visual_damage_assessment_agent/: crew.py  main.py
src/claims_visual_damage_assessment_agent/config/: agents.yaml  tasks.yaml
