[project]
name = "claims_visual_damage_assessment_agent"
version = "0.1.0"
description = "claims_visual_damage_assessment_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
claims_visual_damage_assessment_agent = "claims_visual_damage_assessment_agent.main:run"
run_crew = "claims_visual_damage_assessment_agent.main:run"
train = "claims_visual_damage_assessment_agent.main:train"
replay = "claims_visual_damage_assessment_agent.main:replay"
test = "claims_visual_damage_assessment_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
